# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.xx
DATE xx/xx/2009
30th Alpha Release

NEWS:

NEW: [features/improvements]
+Spell checking support (requires enchant)
+Plugins can now be uninstalled through plugin manager.
+Add support for STATA (patch from Jean Eid).

LIBRARY:
+New api for plugins and other clients to customize buffer context menu.
+New profile api's for registering for notifications of profile changes.

BUG FIXES:
+Fix crash that could occur when loading some binary data into buffer.
+Return unique sorted list of terms when using extended autocomp.
+Fix some color issues when running under GTK.
+Fix line number preference not being remembered on startup.
+Fix error in handling corrupted session files.
+Fix bug in auto clearing of status text that would let timer to continue
 running unnecessarily.
+Fix errors that could occur occasionally when setting status text.
+Fix bug in error reporting when file reload fails.
+Fix some compatibility issues with wxPython 2.8.4
+Fix issue where search direction could get stuck in search previous when using
 the quick search shortcuts.
+Fix crash that could occur when showing find dialog under certain cases.

#-----------------------------------------------------------------------------#

VERSION 0.5.05
DATE 09/02/2009
29th Alpha Release

NEWS:

Important bug fix release to fix a critical regression with handling of files that have
BOM characters in them. All users of release 0.5 should quickly update to this
release as the bug could lead to data loss.

NEW: [features/improvements]
+Find bar is now customizable via right click menu.
+Add Hungarian, Galician, Romanian, and Slovak translations.
+Updated translations

BUG FIXES:
+Fix error in handling BOM when saving files that could result in data loss.